force-app/main/default/objects/Consumer_Definition__mdt/Consumer_Definition__mdt.object-meta.xml
<CustomObject>
    <label>Consumer Definition</label>
    <pluralLabel>Consumer Definitions</pluralLabel>
</CustomObject>