force-app/main/default/objects/Consumer_Definition__mdt/fields/Allowed_Origins__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Origins__c</fullName>
    <label>Allowed Origins</label>
    <type>TextArea</type>
</CustomField>