force-app/main/default/objects/Consumer_Definition__mdt/fields/Allowed_Process_Keys__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Process_Keys__c</fullName>
    <label>Allowed Process Keys</label>
    <type>TextArea</type>
</CustomField>