force-app/main/default/objects/Consumer_Definition__mdt/fields/Allowed_Scenario_Keys__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Scenario_Keys__c</fullName>
    <label>Allowed Scenario Keys</label>
    <type>TextArea</type>
</CustomField>