force-app/main/default/objects/Consumer_Definition__mdt/fields/Application_Owner_Username__c.field-meta.xml
<CustomField>
    <fullName>Application_Owner_Username__c</fullName>
    <label>Application Owner Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>